# promptwars-warmup-kunalwasnik

./: .dockerignore  .gitignore  AGENT.md  DESIGN.md  Dockerfile  LICENSE  README.md  emergency_run.ps1  main.py  pyproject.toml  run.ps1  test_json.py
.antigravity/: instructions.md
app/: config.py  main.py  models.py
app/agents/: factory.py  state.py
app/routers/: __init__.py  learn.py
app/services/: __init__.py  gemini.py
artifacts/: PROMPTS.md  api_contract.md  roadmap.md  spec.md
frontend/: app.js  index.html  style.css
tests/: __init__.py  test_learn.py  test_main.py
